--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -197,7 +197,7 @@ jobs:
 
                   # ------------------------------- Generate Board
                   table_content = "|   | A | B | C | D | E | F | G | H |\n| - | - | - | - | - | - | - | - | - |\n"
-                  str_representation = list(map(lambda row_str: row_str.strip().split("|"), filter(lambda row_str: "|" in row_str, str(game).split("\n"))))
+                  str_representation = list(map(lambda row_str: row_str.split("|"), filter(lambda row_str: "|" in row_str, str(game).split("\n"))))
                   width = len(str_representation[0])
                   height = len(str_representation)
                   for r in range(height):
@@ -208,7 +208,7 @@ jobs:
                             table_content += f"| {piece} " # Add piece to the table
                         else:
                             table_content += "|   "  # Empty square
-                        table_content += "|\n"
+                    table_content += "|\n"
 
                   svg_content = svg.create_svg(game)
                   with open("assets/board.svg", "w") as file:
@@ -232,7 +232,7 @@ jobs:
 
                   # Update README
 
-                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n{table_content}\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n{table_content}\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
