--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -238,7 +238,7 @@ jobs:
 
                   # Update README
 
-                  new_readme = f"""## Damas Tournament\n\nIt's {player}'s turn!\n{table_content}\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  new_readme = f"""## Damas Tournament\n\nIt's ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/{'b' if player == 'Black' else 'w'}.png){player}'s turn !\n{table_content}\n{"Chose Your Move\n" + table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
