--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -238,7 +238,7 @@ jobs:
 
                   # Update README
 
-                  new_readme = f"""## Damas Tournament\n\nIt's your turn !\n{table_content}\n{f"Choose Your Move ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/{'b' if player == 'Black' else 'w'}.png)\n " + table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  new_readme = f"""## Damas Tournament\n\nIt's your turn !\n{table_content}\n{f"Choose Your Move \n ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/{'b' if player == 'Black' else 'w'}.png)\n " + table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
