--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -206,11 +206,11 @@ jobs:
                         piece = str_representation[r][c].strip()
                         if piece == "b":
                             table_content += "| ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/b.png) " 
-                        elif piece == "rb":
+                        elif piece == "B":
                             table_content += "| ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/kb.png) " 
                         elif piece == "w":
                             table_content += "| ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/w.png) " 
-                        elif piece == "rw":
+                        elif piece == "W":
                             table_content += "| ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/kw.png) "
                         else:
                             table_content += "| ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/blank.png) "  # Empty square
