--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -238,7 +238,7 @@ jobs:
 
                   # Update README
 
-                  new_readme = f"""## Damas Tournament\n\n{table_content}\n{f"### **It's your turn ! Choose Your Move** :rocket: \n\n ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/{'b' if player == 'Black' else 'w'}.png)\n " + table_legal_moves if len(trad_moves) > 0 else message}\n\n#### **How to Play**:\n- Click on a move link above to open a new issue\n- Do not modify the issue title or description\n- Simply click the "Submit" button to create the issue\n- The game will automatically process your move\n---\nInspired in chess game by [timburgan](https://github.com/timburgan/timburgan)"""
+                  new_readme = f"""## Damas Tournament\n\n{table_content}\n{f"### **It's your turn ! Choose Your Move** :rocket: \n\n ![](https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/refs/heads/main/assets/{'b' if player == 'Black' else 'w'}.png)\n " + table_legal_moves if len(trad_moves) > 0 else message}\n\n#### **How to Play**:\n- Click on a move link above to open a new issue\n- Do not modify the issue title or description\n- Simply click the "Submit" button to create the issue\n- The game will automatically process your move\n---\n*Developed by Igor Pires* :rocket: - Inspired in chess game by [timburgan](https://github.com/timburgan/timburgan)"""
 
                   current_readme = repo.get_contents('README.md')
 
